chore: [PAGOPA-3066] Changed API helpdesk path
